syntax = "proto3";

package api;

option go_package = "/api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";

message MetricOptionItem {
  string name = 1;
  string description = 2;
  string color = 3;
  string translate = 4;
  string label = 5;
}

message MetricOptionData {
  map<string, float> value = 1;
  int64 metric_id = 2;
  google.protobuf.Timestamp time = 99;
}

message MetricOption {
  repeated MetricOptionItem items = 1;
}

message Metric {
  int64 id = 1;
  string name = 2;
  string description = 3;
  MetricOption options = 4;
  repeated MetricOptionData data = 5;
  string type = 6;
  repeated string ranges = 7;
  google.protobuf.Timestamp created_at = 99;
  google.protobuf.Timestamp updated_at = 100;
}

message GetMetricRequest {
  int64 id = 1;
  optional string range = 2;
  optional google.protobuf.Timestamp from = 99;
  optional google.protobuf.Timestamp to = 100;
}

service MetricService {

  // get metric
  rpc GetMetric (GetMetricRequest) returns (Metric){
    option (google.api.http) = {
      get: "/v1/metric"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }
}
